--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,11 @@ html{
 
 .flex-container {
     display: flex;
-    
+}
+
+.flex-box {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .justify-evenly {
@@ -91,5 +95,10 @@ header {
     padding-top: 0px;
 }
 
-.img_under_text{
+.img_under_text {}
+
+.flex1 {
+    width: 25%;
+    box-sizing: border-box;
+
 }
