--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,6 @@ html{
     display: flex;
 }
 
-.flex-box {
-    display: flex;
-    flex-wrap: wrap;
-}
 
 .justify-evenly {
     justify-content: space-evenly;
@@ -99,6 +95,11 @@ header {
 
 .flex1 {
     width: 25%;
-    box-sizing: border-box;
-
+    box-sizing: border-box;    
+}
+.flex-box {
+    display: flex;
+    flex-wrap: wrap ;
+    flex-shrink: 10%;
+    order: 3;
 }
